MULTISITE-2784 create a list of multisite custom modules in the default build

--- a/dev/jenkins/build.default.properties
+++ b/dev/jenkins/build.default.properties
@@ -10,7 +10,7 @@ project.code.dir = sites/projectname
 
 project.theme = project_theme
 project.modules.custom = project_module project_module_two
-project.modules.multisite = Block, ECAS
+project.modules.multisite = Block ECAS
 
 multisite.modules = splash_screen
 multisite.base.dir = lib/MULTISITE
