MULTISITE-2784 Add Multisite multilingual group

--- a/dev/jenkins/build.default.properties
+++ b/dev/jenkins/build.default.properties
@@ -10,7 +10,7 @@ project.code.dir = sites/projectname
 
 project.theme = project_theme
 project.modules.custom = project_module project_module_two
-project.modules.multisite = 'Multisite Core Features, Multisite QA'
+project.modules.multisite = 'Multisite Core Features, Multisite QA, Multisite multilingual'
 
 multisite.modules = splash_screen
 multisite.base.dir = lib/MULTISITE
