--- a/dev/jenkins/build.xml
+++ b/dev/jenkins/build.xml
@@ -76,7 +76,8 @@
       <isset property="drupal.uri" />
       <then>
         <drush command="test-run" uri="${drupal.uri}" haltonerror="false">
-          <param>Aggregator,Block,Comment,Color,Contact,Field,Field_ui,File,Filter,Content translation,Contextual links</param>
+          <param>Aggregator,Block,Comment,Color,Contact,Field,Field_ui,File,Filter,Content translation,Contextual links,</param>
+          <param>${project.modules.multisite}</param>
 
           <option name="xml">${project.logdir}/tests</option>
         </drush>
