MULTISITE-3365 dynamic connexion url

--- a/dev/jenkins/build.default.properties
+++ b/dev/jenkins/build.default.properties
@@ -15,7 +15,9 @@ project.modules.multisite = "Multisite Core Features, Multisite QA, Multisite mu
 multisite.modules = splash_screen
 multisite.base.dir = lib/MULTISITE
 
-drupal.db.url = "mysqli://username:password@localhost:3306/dbname"
+drupal.db.schema = mysql
+drupal.db.host = localhost
+drupal.db.port = 3306
 drupal.profile = "multisite_drupal_standard"
 
 drupal.account.name = "admin"
