--- a/dev/jenkins/build.xml
+++ b/dev/jenkins/build.xml
@@ -221,10 +221,9 @@
 
   <target name="site-install" depends="init, setup-phing-drush"
           unless="project.installed">
-
+    <property name="drupal.db.url" value="${drupal.db.schema}://${drupal.db.user.name}:${drupal.db.user.pass}@${drupal.db.host}:${drupal.db.port}/${drupal.db.name}" />
     <drush command="site-install" assume="yes">
       <option name="db-url">${drupal.db.url}</option>
-      <!-- <option name="sites-subdir">${drupal.db.url}</option> -->
       <option name="account-name">${drupal.account.name}</option>
       <option name="account-pass">${drupal.account.pass}</option>
       <option name="account-mail">${drupal.account.mail}</option>
