MULTISITE-3365 Set common properties

--- a/dev/jenkins/build.default.properties
+++ b/dev/jenkins/build.default.properties
@@ -4,11 +4,11 @@
 
 drupal.uri = "http://projectname:80"
 
-drupal.make.file = projectname.make
+drupal.make.file = fpfis.make
 drupal.make.dir = www
-project.code.dir = sites/projectname
+project.code.dir = sites/fpfis
 
-project.theme = project_theme
+project.theme = ec_resp
 project.modules.custom = project_module project_module_two
 project.modules.multisite = "Multisite Core Features, Multisite QA, Multisite multilingual, ECAS, Multisite - Media, Multisite Standard Features"
 
