--- a/dev/jenkins/build.default.properties
+++ b/dev/jenkins/build.default.properties
@@ -10,6 +10,7 @@ project.code.dir = sites/fpfis
 
 project.theme = ec_resp
 project.modules.custom = project_module project_module_two
+# Features groups for which the simpletest QA will be performed
 project.modules.multisite = "Multisite Core Features, Multisite QA, Multisite multilingual, ECAS, Multisite - Media, Multisite Standard Features"
 
 multisite.modules = splash_screen
